ハーフコートを作成し切り替えができるようにした

--- a/component/styles/court.css
+++ b/component/styles/court.css
@@ -1,7 +1,7 @@
 :root {
   --main-size: 40vw;
 }
-.coat-wrapper {
+.court-wrapper {
   background-image: radial-gradient(
     circle,
     rgba(255, 242, 58, 1),
@@ -12,7 +12,12 @@
   justify-content: center;
   padding: calc(var(--main-size) / 10);
 }
-.coat {
+
+.rotate {
+  transform: rotate(90deg);
+}
+
+.court {
   width: var(--main-size);
   height: var(--main-size);
   background: rgb(202, 240, 255);
